# ClipboardInspector

./: .gitignore  .gitmodules  .qmllint.ini  CMakeLists.txt  README.md  clipboardinspector.kdev4  com.cuperino.clipboardinspector.appdata.xml  com.cuperino.clipboardinspector.desktop  com.cuperino.clipboardinspector.json  com.cuperino.clipboardinspector.metainfo.xml  org.kde.testapp.desktop  org.kde.testapp.json  org.kde.testapp.metainfo.xml
src/: CMakeLists.txt  com.cuperino.clipboardinspector.appdata.xml  com.cuperino.clipboardinspector.desktop  main.cpp  qtquickcontrols2.conf  resources.qrc
src/contents/ui/: AboutPage.qml  main.qml
src/document/: documenthandler.cpp  documenthandler.h
src/icons/: clipboardinspector.icns
